--- a/app/src/main/res/layout-h600dp/activity_play_details.xml
+++ b/app/src/main/res/layout-h600dp/activity_play_details.xml
@@ -111,9 +111,9 @@
             </RelativeLayout>
 
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
+                android:textAlignment="center"
                 android:layout_marginTop="5dp"
                 android:fontFamily="@font/ultra"
                 android:text="@string/can_you_beat_that"
