--- a/app/src/main/res/layout-h1024dp/item_progress.xml
+++ b/app/src/main/res/layout-h1024dp/item_progress.xml
@@ -1,23 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="70dp"
     android:layout_marginLeft="5dp"
     android:layout_marginTop="1dp"
     android:layout_marginRight="5dp"
-    android:background="@drawable/ic_hexnow"
-    android:orientation="horizontal">
+    android:background="@drawable/ic_hexnow">
 
     <RelativeLayout
+        android:id="@+id/count_container"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
+        android:layout_alignParentStart="true"
+        android:layout_centerVertical="true"
         android:layout_marginStart="10dp">
 
         <ImageView
             android:layout_width="wrap_content"
-            android:layout_height="50dp"
+            android:layout_height="55dp"
             android:layout_centerInParent="true"
             android:contentDescription="@string/app_name"
             android:src="@drawable/hexagon"
@@ -40,12 +41,13 @@
         android:id="@+id/amount_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
+        android:layout_centerVertical="true"
         android:layout_marginEnd="20dp"
+        android:layout_toEndOf="@id/count_container"
         android:fontFamily="@font/fjalla_one"
         android:textAlignment="center"
         android:textColor="@color/white"
         android:textSize="16sp"
         android:textStyle="bold" />
 
-</LinearLayout>
+</RelativeLayout>
