--- a/app/src/main/res/layout/activity_result_dialog.xml
+++ b/app/src/main/res/layout/activity_result_dialog.xml
@@ -62,8 +62,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
             android:gravity="center"
             android:orientation="vertical">
 
@@ -94,7 +94,7 @@
 
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_toRightOf="@+id/daily"
+                        android:layout_toEndOf="@+id/daily"
                         android:fontFamily="@font/arimo"
                         android:gravity="center"
                         android:text="6th"
@@ -142,7 +142,7 @@
                         android:id="@+id/position2"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_toRightOf="@+id/weekly"
+                        android:layout_toEndOf="@+id/weekly"
                         android:fontFamily="@font/arimo"
                         android:gravity="center"
                         android:text="6th"
@@ -206,10 +206,10 @@
             android:id="@+id/view_ranking"
             android:layout_width="match_parent"
             android:layout_height="60dp"
-            android:layout_marginLeft="25dp"
+            android:layout_marginStart="25dp"
 
             android:layout_marginTop="20dp"
-            android:layout_marginRight="25dp"
+            android:layout_marginEnd="25dp"
             android:background="@drawable/ic_hexnow"
             android:padding="10dp">
 
@@ -230,10 +230,10 @@
             android:id="@+id/view_history"
             android:layout_width="match_parent"
             android:layout_height="60dp"
-            android:layout_marginLeft="25dp"
+            android:layout_marginStart="25dp"
 
             android:layout_marginTop="10dp"
-            android:layout_marginRight="25dp"
+            android:layout_marginEnd="25dp"
             android:background="@drawable/ic_hexnow"
             android:padding="10dp">
 
@@ -252,10 +252,10 @@
             android:id="@+id/play_again"
             android:layout_width="match_parent"
             android:layout_height="60dp"
-            android:layout_marginLeft="25dp"
+            android:layout_marginStart="25dp"
             android:layout_marginTop="10dp"
 
-            android:layout_marginRight="25dp"
+            android:layout_marginEnd="25dp"
             android:layout_marginBottom="10dp"
             android:background="@drawable/hex_green"
             android:padding="10dp">
