--- a/app/src/main/res/layout-h480dp/activity_dashboard.xml
+++ b/app/src/main/res/layout-h480dp/activity_dashboard.xml
@@ -415,7 +415,7 @@
         android:layout_height="wrap_content"
         ads:adSize="FULL_BANNER"
         android:layout_alignParentBottom="true"
-        ads:adUnitId="@string/banner_adunit">
+        ads:adUnitId="@string/banner_ad_unit">
     </com.google.android.gms.ads.AdView>
 
 
