Add japanese and german

--- a/app/src/main/res/layout-h720dp/activity_exam_game2.xml
+++ b/app/src/main/res/layout-h720dp/activity_exam_game2.xml
@@ -183,7 +183,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         ads:adSize="FULL_BANNER"
-        ads:adUnitId="@string/banner_adunit" />
+        ads:adUnitId="@string/banner_ad_unit" />
 
     <LinearLayout
         android:id="@+id/guid_layout"
