--- a/app/src/main/res/layout/single_history.xml
+++ b/app/src/main/res/layout/single_history.xml
@@ -67,7 +67,7 @@
             android:layout_height="wrap_content"
 
             ads:adSize="MEDIUM_RECTANGLE"
-            ads:adUnitId="@string/banner_adunit"></com.google.android.gms.ads.AdView>
+            ads:adUnitId="@string/banner_ad_unit"></com.google.android.gms.ads.AdView>
 
     </LinearLayout>
 
