--- a/app/src/main/res/layout/single_history_details.xml
+++ b/app/src/main/res/layout/single_history_details.xml
@@ -66,7 +66,7 @@
             android:layout_height="wrap_content"
 
             ads:adSize="MEDIUM_RECTANGLE"
-            ads:adUnitId="@string/banner_adunit">
+            ads:adUnitId="@string/banner_ad_unit">
         </com.google.android.gms.ads.AdView>
 
     </LinearLayout>
