Add japanese and german

--- a/app/src/main/res/layout-h720dp/activity_game3.xml
+++ b/app/src/main/res/layout-h720dp/activity_game3.xml
@@ -626,6 +626,6 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         ads:adSize="FULL_BANNER"
-        ads:adUnitId="@string/banner_adunit" />
+        ads:adUnitId="@string/banner_ad_unit" />
 
 </RelativeLayout>
