--- a/app/src/main/res/layout-h1024dp/activity_history.xml
+++ b/app/src/main/res/layout-h1024dp/activity_history.xml
@@ -81,7 +81,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         ads:adSize="FULL_BANNER"
-        ads:adUnitId="@string/banner_adunit"></com.google.android.gms.ads.AdView>
+        ads:adUnitId="@string/banner_ad_unit"></com.google.android.gms.ads.AdView>
 
 
 </RelativeLayout>
