--- a/app/src/main/res/layout-h720dp/activity_history.xml
+++ b/app/src/main/res/layout-h720dp/activity_history.xml
@@ -80,7 +80,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         ads:adSize="FULL_BANNER"
-        ads:adUnitId="@string/banner_adunit"/>
+        ads:adUnitId="@string/banner_ad_unit"/>
 
 
 </RelativeLayout>
