--- a/app/src/main/res/layout-h600dp/activity_leader_board.xml
+++ b/app/src/main/res/layout-h600dp/activity_leader_board.xml
@@ -230,7 +230,7 @@
         android:layout_height="wrap_content"
         ads:adSize="FULL_BANNER"
         android:layout_alignParentBottom="true"
-        ads:adUnitId="@string/banner_adunit">
+        ads:adUnitId="@string/banner_ad_unit">
     </com.google.android.gms.ads.AdView>
 
 </RelativeLayout>
