--- a/app/src/main/res/layout-h720dp/activity_count_down.xml
+++ b/app/src/main/res/layout-h720dp/activity_count_down.xml
@@ -43,19 +43,19 @@
                 android:textColor="@color/orange"
                 android:textSize="30sp"
                 android:textStyle="bold" />
+
         </LinearLayout>
 
-
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:fontFamily="@font/ultra"
             android:text="@string/get_ready"
+            android:textAlignment="center"
             android:textColor="@color/white"
             android:textSize="26sp"
             android:textStyle="bold" />
-
 
         <RelativeLayout
             android:id="@+id/hex"
