--- a/app/src/main/res/layout/activity_count_down.xml
+++ b/app/src/main/res/layout/activity_count_down.xml
@@ -47,10 +47,11 @@
     </LinearLayout>
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/get_ready"
         android:textSize="26sp"
+        android:textAlignment="center"
         android:textStyle="bold"
         android:textColor="@color/white"
         android:fontFamily="@font/ultra"
