--- a/app/src/main/res/layout/dialog_loading.xml
+++ b/app/src/main/res/layout/dialog_loading.xml
@@ -9,6 +9,8 @@
         android:id="@+id/loadingImageView"
         android:layout_width="120dp"
         android:layout_height="120dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
         android:layout_centerInParent="true"
         android:contentDescription="@string/loading_image"
         android:src="@drawable/game_logo" />
