--- a/app/src/main/res/layout-h1024dp/activity_count_down.xml
+++ b/app/src/main/res/layout-h1024dp/activity_count_down.xml
@@ -52,10 +52,11 @@
 
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fontFamily="@font/ultra"
             android:text="@string/get_ready"
+            android:textAlignment="center"
             android:textColor="@color/white"
             android:layout_gravity="center_horizontal"
             android:textSize="26sp"
