--- a/app/src/main/res/layout-h1024dp/activity_failure.xml
+++ b/app/src/main/res/layout-h1024dp/activity_failure.xml
@@ -24,41 +24,32 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginTop="60dp"
+                android:layout_marginTop="100dp"
                 android:layout_marginBottom="30dp"
                 android:fontFamily="@font/ultra"
                 android:text="@string/replay_level"
                 android:textAlignment="center"
                 android:textColor="@color/white"
-                android:textSize="26sp" />
+                android:textSize="40sp" />
 
             <RelativeLayout
                 android:id="@+id/hex"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="200dp"
+                android:layout_height="180dp"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginTop="40dp">
-
-                <ImageView
-                    android:layout_width="160dp"
-                    android:layout_height="140dp"
-                    android:layout_marginStart="10dp"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginEnd="10dp"
-                    android:layout_marginBottom="10dp"
-                    android:contentDescription="@string/next"
-                    android:rotation="90"
-                    android:src="@drawable/hexagon_2"
-                    app:tint="@color/white" />
-
+                android:layout_marginTop="50dp"
+                android:background="@drawable/hexagon_2"
+                android:rotation="90">
 
                 <TextView
                     android:id="@+id/count_down_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
-                    android:layout_gravity="center"
+                    android:layout_centerHorizontal="true"
+                    android:layout_centerVertical="true"
                     android:fontFamily="@font/fjalla_one"
+                    android:rotation="-90"
+                    android:textAlignment="center"
                     android:textColor="@color/white"
                     android:textSize="40sp"
                     android:textStyle="bold" />
@@ -70,7 +61,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
-                android:layout_marginTop="50dp"
+                android:layout_marginTop="100dp"
                 android:layout_marginEnd="20dp"
                 android:fontFamily="@font/ultra"
                 android:gravity="center"
@@ -83,23 +74,21 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="40dp"
+                android:layout_marginTop="40dp"
                 android:layout_marginEnd="40dp">
 
                 <RelativeLayout
                     android:id="@+id/btn_forAnim"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="30dp"
+                    android:layout_margin="10dp"
                     android:background="@drawable/playbtn_bg" />
 
                 <RelativeLayout
                     android:id="@+id/continue_game"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="30dp"
-                    android:layout_marginTop="30dp"
-                    android:layout_marginEnd="30dp"
-                    android:layout_marginBottom="30dp"
+                    android:layout_margin="10dp"
                     android:background="@drawable/playbtn_bg"
                     android:gravity="center">
 
@@ -148,7 +137,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="80dp"
                 android:layout_marginStart="50dp"
-                android:layout_marginTop="-10dp"
+                android:layout_marginTop="50dp"
                 android:layout_marginEnd="50dp"
                 android:background="@drawable/ic_hexnow"
                 android:padding="10dp">
@@ -170,7 +159,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="50dp"
                 android:layout_marginBottom="20dp"
                 android:text="@string/no_thanks"
                 android:textColor="@color/white"
