--- a/app/src/main/res/layout-h480dp/activity_failure.xml
+++ b/app/src/main/res/layout-h480dp/activity_failure.xml
@@ -32,33 +32,25 @@
                 android:textColor="@color/white"
                 android:textSize="24sp" />
 
+
             <RelativeLayout
                 android:id="@+id/hex"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="120dp"
+                android:layout_height="100dp"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginTop="10dp">
-
-                <ImageView
-                    android:layout_width="140dp"
-                    android:layout_height="120dp"
-                    android:layout_marginStart="10dp"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginEnd="10dp"
-                    android:layout_marginBottom="10dp"
-                    android:contentDescription="@string/next"
-                    android:rotation="90"
-                    android:src="@drawable/hexagon_2"
-                    app:tint="@color/white" />
-
+                android:layout_marginTop="10dp"
+                android:background="@drawable/hexagon_2"
+                android:rotation="90">
 
                 <TextView
                     android:id="@+id/count_down_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
-                    android:layout_gravity="center"
+                    android:layout_centerHorizontal="true"
+                    android:layout_centerVertical="true"
                     android:fontFamily="@font/fjalla_one"
+                    android:rotation="-90"
+                    android:textAlignment="center"
                     android:textColor="@color/white"
                     android:textSize="40sp"
                     android:textStyle="bold" />
@@ -76,7 +68,7 @@
                 android:gravity="center"
                 android:text="@string/failure_text"
                 android:textColor="@color/white"
-                android:textSize="18sp" />
+                android:textSize="16sp" />
 
 
             <RelativeLayout
@@ -89,14 +81,14 @@
                     android:id="@+id/btn_forAnim"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="20dp"
+                    android:layout_margin="30dp"
                     android:background="@drawable/playbtn_bg" />
 
                 <RelativeLayout
                     android:id="@+id/continue_game"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="20dp"
+                    android:layout_margin="30dp"
                     android:background="@drawable/playbtn_bg"
                     android:gravity="center">
 
@@ -135,7 +127,6 @@
                         android:textColor="@color/white"
                         android:textSize="14sp"
                         android:textStyle="bold" />
-
 
                 </RelativeLayout>
             </RelativeLayout>
